# docs/swagger.json
@@ -310,58 +310,6 @@
                 }
             }
         },
-        "/api/questions/team": {
-            "get": {
-                "tags": [
-                    "API"
-                ],
-                "summary": "Получение вопросов 2 теста",
-                "responses": {
-                    "202": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "questions": {
-                                            "type": "object",
-                                            "example": {
-                                                "Questions_Team_1": {
-                                                    "id": "Questions_Team_1",
-                                                    "question": "ОГО?",
-                                                    "answers": [
-                                                        "да",
-                                                        "нет"
-                                                    ],
-                                                    "socer": 5
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Ошибка сервера"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/answer": {
             "post": {
                 "tags": [
@@ -384,122 +332,6 @@
                                             {
                                                 "id": "Questions_2",
                                                 "answer": "5"
-                                            }
-                                        ]
-                                    }
-                                },
-                                "required": [
-                                    "answer"
-                                ]
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "202": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Ответ получен"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Нельзя отправить ответ"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Пользователь не найден"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Ошибка сервера"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/answer/team": {
-            "post": {
-                "tags": [
-                    "API"
-                ],
-                "summary": "Отправка ответа на 2 тест",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "answer": {
-                                        "example": [
-                                            {
-                                                "id": "Questions_Team_1",
-                                                "answer": "ОГООГО"
-                                            },
-                                            {
-                                                "id": "Questions_Team_1",
-                                                "answer": "Как"
                                             }
                                         ]
                                     }
